--- a/waste-management-api/views/header.pug
+++ b/waste-management-api/views/header.pug
@@ -16,3 +16,8 @@ header#header.header.fixed-top.d-flex.align-items-center
       //-     li.nav-item.d-block.d-lg-none
       //-       a.nav-link.nav-icon.search-bar-toggle(href="#")
       //-         i.bi.bi-search
+      //-     li.nav-item
+        
+        button.btn.btn-outline-primary(type='button' onclick='performSimulation()') Perform Simulation
+
+     
