--- a/waste-management-api/views/treatment_sites.pug
+++ b/waste-management-api/views/treatment_sites.pug
@@ -17,6 +17,16 @@ li.nav-item
     li 
       a(href="#")
         i.bi.bi-circle
+        span Treatment Technologies
+    
+    li 
+      a(href="#")
+        i.bi.bi-circle
+        span Treatment Site Technology Type
+
+    li 
+      a(href="#")
+        i.bi.bi-circle
         span Filter Points
     li 
       div.form-filter
