--- a/waste-management-api/views/layout.pug
+++ b/waste-management-api/views/layout.pug
@@ -24,14 +24,19 @@ html(lang="en")
     link(href="/assets/vendor/simple-datatables/style.css" rel="stylesheet")
     link(href="/assets/css/style.css" rel="stylesheet")
 
+    link(rel='stylesheet', href='https://cdn.datatables.net/1.10.24/css/jquery.dataTables.min.css')
+    script(src="https://code.jquery.com/jquery-3.6.0.min.js")
+    script(src='https://cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js')
+
     script(src="https://maps.stamen.com/js/tile.stamen.js?v1.3.0")
     script(src="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.9.0/build/ol.js")
     link(rel="stylesheet" href="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.9.0/css/ol.css" type="text/css")
     script(src="https://cdn.jsdelivr.net/gh/walkermatt/ol-layerswitcher@master/dist/ol-layerswitcher.js")
     link(rel="stylesheet" href="https://cdn.jsdelivr.net/gh/walkermatt/ol-layerswitcher@master/dist/ol-layerswitcher.css" type="text/css")
-    script(src="https://code.jquery.com/jquery-3.6.0.min.js")
     script(src="https://code.jquery.com/ui/1.13.0/jquery-ui.min.js")
     script(src="./assets/js/utils.js")
+    script(src="https://unpkg.com/sweetalert/dist/sweetalert.min.js")
+
 
     style.
       html, body, #map {
@@ -48,6 +53,10 @@ html(lang="en")
         width: 350px;
         height: 200px;
       }
+      
+
+
+
     block styles
 
   body
@@ -55,23 +64,21 @@ html(lang="en")
     include header.pug
     // End Header
 
-    
     // ======= Sidebar =======
     aside#sidebar.sidebar
       ul.sidebar-nav#sidebar-nav
         include sidebar_items.pug
       // End Sidebar
 
-    
     main#main.main
-    
+
     block content
 
-    
-    script(src='/assets/vendor/bootstrap/js/bootstrap.bundle.min.js')
-    script(src='/assets/vendor/echarts/echarts.min.js')
-    script(src='/assets/vendor/quill/quill.min.js')
-    script(src='/assets/vendor/simple-datatables/simple-datatables.js')
+    script(src='assets/vendor/apexcharts/apexcharts.min.js')
+    script(src='assets/vendor/bootstrap/js/bootstrap.bundle.min.js')
+    script(src='assets/vendor/chart.js/chart.umd.js')
+    script(src='assets/vendor/echarts/echarts.min.js')
+    script(src='assets/vendor/quill/quill.min.js')
+    script(src='assets/vendor/simple-datatables/simple-datatables.js')
+    script(src='assets/vendor/tinymce/tinymce.min.js')
     script(src='/assets/js/main.js')
-
-
